<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ob-mc.net</groupId>
  <artifactId>OBSpawnControl</artifactId>
  <name>OBSpawnControl</name>
  <version>1.1</version>
  <description>Spawn point management for a lobby or server</description>
  <url>http://ob-mc.net</url>
  <packaging>jar</packaging>

  <properties>
    <api-version>1.21</api-version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>

    <finalName>${project.name}-${project.version}</finalName>

    <!-- ensure plugin.yml gets the tags updated -->
    <resources>
      <resource>
        <targetPath>.</targetPath>
        <filtering>true</filtering>
        <directory>${basedir}/src/main/resources/</directory>
        <includes>
          <include>*.yml</include>
        </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgs>
            <arg>-Xlint:-options</arg>
            <arg>-proc:full</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
  	<repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
  </repositories>
    
  <dependencies>
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.21.3-R0.1-SNAPSHOT</version>
    </dependency>
  </dependencies>

</project>
